--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-elements": "^3.4.3",
+    "react-native-svg": "^13.9.0",
+    "twrnc": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
